# community-detection-social-networks

./: .gitattributes  .gitignore  workspace.code-workspace
louvain/: louvain.py  note.ipynb  note2.ipynb  pyproject.toml  sampling.ipynb  test.ipynb
louvain/adj_json_communities_txt/: community_11.txt  community_12.txt  community_14.txt  community_15.txt  community_16.txt  community_17.txt  community_18.txt  community_22.txt  community_23.txt  community_24.txt  community_25.txt  community_26.txt  community_29.txt  community_30.txt  community_32.txt  community_36.txt  community_37.txt  community_39.txt  community_4.txt  community_40.txt  community_41.txt  community_42.txt  community_45.txt  community_46.txt  community_47.txt  community_48.txt  community_49.txt  community_5.txt  community_50.txt  community_6.txt  community_7.txt  community_8.txt
louvain/communities_json/: community_0.json  community_1.json  community_10.json  community_11.json  community_12.json  community_13.json  community_14.json  community_15.json  community_16.json  community_17.json  community_18.json  community_19.json  community_2.json  community_20.json  community_21.json  community_22.json  community_23.json  community_24.json  community_25.json  community_26.json  community_27.json  community_28.json  community_29.json  community_3.json  community_30.json  community_31.json  community_32.json  community_33.json  community_34.json  community_35.json  community_36.json  community_37.json  community_38.json  community_39.json  community_4.json  community_40.json  community_41.json  (+14 more)
(+139 files in other folders)
