[project]
name = "louvain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "python-louvain>=0.16",
    "requests>=2.32.5",
]
